fixed alignment of h7 text

--- a/src/index.css
+++ b/src/index.css
@@ -730,6 +730,10 @@ h7{
   color: #1c2a43;
   font-size: 25px;
   font-weight: 700;
+  align-items: center;
+  justify-content: center;
+  
+  
 } 
 
 h8{
